<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/edit_addr"
        android:layout_width="319dp"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:hint="주소를 추가해주세요."
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/button_GPS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_police2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="76dp"
        android:text="분실물"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:text="뱃지"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_police"
        app:layout_constraintTop_toBottomOf="@+id/button_find" />

    <Button
        android:id="@+id/button_bus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:onClick="onClick_url"
        android:text="대중교통"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_address"
        app:layout_constraintTop_toBottomOf="@+id/button_find" />

    <Button
        android:id="@+id/button_police"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/button_police"
        app:layout_constraintEnd_toStartOf="@+id/button_badge"
        app:layout_constraintStart_toEndOf="@+id/button_click"
        app:layout_constraintTop_toBottomOf="@+id/button_address" />

    <Button
        android:id="@+id/button_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/button_click"
        app:layout_constraintEnd_toStartOf="@+id/button_police"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_gps" />

    <Button
        android:id="@+id/button_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:onClick="onClick_url"
        android:text="주소검색"
        app:layout_constraintStart_toEndOf="@+id/button_gps"
        app:layout_constraintTop_toBottomOf="@+id/button_police2" />

    <Button
        android:id="@+id/button_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:text="습득물"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_police2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:onClick="onClick_url"
        android:text="GPS"
        app:layout_constraintEnd_toStartOf="@+id/button_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_listview" />

    <Button
        android:id="@+id/button_listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="72dp"
        android:text="@string/button_listview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="400dp"
        android:layout_height="270dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_GPS"
        android:layout_width="64dp"
        android:layout_height="49dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:text="GPS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_addr"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_bus"
        android:layout_width="62dp"
        android:layout_height="62dp"

        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_round"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_click"
        app:srcCompat="@drawable/bus" />

    <ImageButton
        android:id="@+id/button_taxi"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"

        android:layout_marginLeft="64dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_round"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintStart_toEndOf="@+id/button_bus"
        app:layout_constraintTop_toBottomOf="@+id/button_police"
        app:srcCompat="@drawable/taxi" />

    <ImageButton
        android:id="@+id/button_subway"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginStart="61dp"

        android:layout_marginLeft="61dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_round"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintStart_toEndOf="@+id/button_taxi"
        app:layout_constraintTop_toBottomOf="@+id/button_badge"
        app:srcCompat="@drawable/subway" />


</androidx.constraintlayout.widget.ConstraintLayout>